3.4/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ott
  labels:
    app.kubernetes.io/name: ott
    app.kubernetes.io/instance: ott
